--- a/Rock.JavaScript/src/streamchat/styles/components/_modal.scss
+++ b/Rock.JavaScript/src/streamchat/styles/components/_modal.scss
@@ -130,7 +130,8 @@
 .create-channel-modal-footer {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-end;
+    gap: 8px;
 }
 
 .create-channel-modal-body {
@@ -154,30 +155,6 @@
     color: var(--color-interface-strong);
 }
 
-.create-channel-modal-footer button {
-    padding: 0.5rem 1rem;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.create-channel-modal-create {
-    background: var(--color-primary);
-    color: #fff;
-}
-
-.create-channel-modal-create:disabled {
-    opacity: 0.5;
-    cursor: not-allowed;
-}
-
-.create-channel-modal-create:disabled:hover {
-    opacity: 0.5;
-}
-
-.create-channel-modal-footer button:hover {
-    opacity: 0.9;
-}
 
 .create-channel-modal-input-container {
     display: flex;
