--- a/Rock.JavaScript/src/streamchat/styles/components/components.scss
+++ b/Rock.JavaScript/src/streamchat/styles/components/components.scss
@@ -1,15 +1,17 @@
 @use 'channel-header.scss';
 @use 'channel-list-header.scss';
 @use 'channel-list.scss';
+@use 'channel-member-list.scss';
+@use 'channel-member.scss';
 @use 'channel-preview.scss';
 @use 'channel-rightpane.scss';
+@use 'channel-thread-list-item.scss';
+@use 'channel-thread-list.scss';
 @use 'date-seperator.scss';
 @use 'message-composer.scss';
 @use 'message-list.scss';
+@use 'message-search.scss';
 @use 'message.scss';
 @use 'modal.scss';
 @use 'reactions.scss';
-@use 'channel-thread-list-item.scss';
-@use 'channel-thread-list.scss';
 @use 'window.scss';
-@use 'message-search.scss';
