--- a/Rock.JavaScript/src/streamchat/styles/components/components.scss
+++ b/Rock.JavaScript/src/streamchat/styles/components/components.scss
@@ -8,6 +8,7 @@
 @use 'channel-thread-list-item.scss';
 @use 'channel-thread-list.scss';
 @use 'date-seperator.scss';
+@use 'directory.scss';
 @use 'message-composer.scss';
 @use 'message-list.scss';
 @use 'message-search.scss';
