--- a/Rock.JavaScript/src/streamchat/styles/components/_channel-rightpane.scss
+++ b/Rock.JavaScript/src/streamchat/styles/components/_channel-rightpane.scss
@@ -1,8 +1,8 @@
 /* Right Pane */
 .rocktheme-community {
     --right-pane-width: 280px;
-    --right-pane-width-md: 380px;
-    --right-pane-width-lg: 396px;
+    --right-pane-width-md: 500px;
+    --right-pane-width-lg: 600px;
 
     --right-pane-bg: var(--color-interface-softest);
     --right-pane-border: 1px solid var(--color-interface-soft);
@@ -181,6 +181,12 @@
         flex-grow: 1;
         flex-direction: column;
         width: 100%;
+
+        // We need to constrain this layout to prevent overflow issues. Use
+        // max width that it doesn't exceed the right pane width.
+        .str-chat__attachment-list .str-chat__message-attachment-card {
+            max-width: calc(var(--right-pane-width) - 100px);
+        }
 
         .str-chat__thread .str-chat__main-panel-inner {
             flex-grow: 1;
