--- a/Rock.JavaScript/src/streamchat/styles/components/_message-search.scss
+++ b/Rock.JavaScript/src/streamchat/styles/components/_message-search.scss
@@ -31,7 +31,7 @@
             }
 
             &:focus {
-                border: 1px solid var(--color-primary-strong);
+                border: 1px solid var(--color-primary);
             }
         }
 
