--- a/Rock.JavaScript/src/streamchat/styles/components/_directory.scss
+++ b/Rock.JavaScript/src/streamchat/styles/components/_directory.scss
@@ -11,7 +11,7 @@
     .directory-search-segment {
         background: none;
         border: none;
-        color: var(--color-primary);
+        color: var(--color-interface-strong);
         font-size: 16px;
         font-weight: 600;
         padding: 0 0 4px 0;
@@ -152,6 +152,11 @@
                 display: flex;
                 gap: 12px;
                 align-items: center;
+            }
+
+            .directory-channel-avatar {
+                --str-chat__avatar-size: calc(var(--str-chat__spacing-px) * 36);
+                flex-shrink: 0;
             }
 
             .directory-channel-name {
