--- a/Rock.JavaScript/src/streamchat/styles/components/_message-search.scss
+++ b/Rock.JavaScript/src/streamchat/styles/components/_message-search.scss
@@ -130,4 +130,29 @@
             word-break: break-word;
         }
     }
+
+    .message-search-no-results {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        min-height: 120px;
+        text-align: center;
+        color: var(--color-interface-medium);
+
+        .message-search-no-results-inner {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 12px;
+            font-size: 16px;
+            color: var(--color-interface-medium);
+
+            i.fas.fa-search {
+                font-size: 32px;
+                color: var(--color-interface-medium);
+                margin-bottom: 4px;
+            }
+        }
+    }
 }
